--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="nav-link active text-light" aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary" href="/about.html">About</a>
+            <a class="nav-link text-secondary" href="https://nf1991.github.io/icoder/about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-secondary" href="#" role="button" data-bs-toggle="dropdown"
@@ -47,7 +47,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary" href="/contact.html">Contact Us</a>
+            <a class="nav-link text-secondary" href="https://nf1991.github.io/icoder/contact.html">Contact Us</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
