--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link text-secondary" aria-current="page" href="/index.html">Home</a>
+            <a class="nav-link text-secondary" aria-current="page" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-light" href="/about.html">About</a>
+            <a class="nav-link active text-light" href="./about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-secondary" href="#" role="button" data-bs-toggle="dropdown"
@@ -47,7 +47,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary" href="/contact.html">Contact Us</a>
+            <a class="nav-link text-secondary" href="./contact.html">Contact Us</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -152,10 +152,10 @@
         </div>
       </div>
       <div class="col-6">
-        <div class="p-3"><img src="/img/about-1.jpg" alt=""></div>
+        <div class="p-3"><img src="../img/about-1.jpg" alt=""></div>
       </div>
       <div class="col-6">
-        <div class="p-3"><img src="/img/about-2.jpg" alt=""></div>
+        <div class="p-3"><img src="../img/about-2.jpg" alt=""></div>
       </div>
       <div class="header2 col-6">
         <div class="p-0">
