--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link text-secondary" aria-current="page" href="./index.html">Home</a>
+            <a class="nav-link text-secondary" aria-current="page" href="/icoder/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-light" href="./about.html">About</a>
+            <a class="nav-link active text-light" href="/icoder/about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle text-secondary" href="#" role="button" data-bs-toggle="dropdown"
