--- a/about.html
+++ b/about.html
@@ -152,10 +152,10 @@
         </div>
       </div>
       <div class="col-6">
-        <div class="p-3"><img src="../img/about-1.jpg" alt=""></div>
+        <div class="p-3"><img src="./img/about-1.jpg" alt=""></div>
       </div>
       <div class="col-6">
-        <div class="p-3"><img src="../img/about-2.jpg" alt=""></div>
+        <div class="p-3"><img src="./img/about-2.jpg" alt=""></div>
       </div>
       <div class="header2 col-6">
         <div class="p-0">
